--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
+  "name": "autointel",
+  "version": "1.0.0",
+  "description": "Auction intelligence platform for automotive buyers",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
+    "express": "^4.18.2",
     "dotenv": "^17.2.3",
     "playwright": "^1.58.0",
-    "puppeteer": "^24.36.1"
+    "puppeteer": "^24.36.1",
+    "pg": "^8.11.3",
+    "multer": "^1.4.5-lts.1",
+    "express-session": "^1.17.3",
+    "bcrypt": "^5.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
