Add historical sales matching + database schema

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # Autoniq Credentials
 AUTONIQ_USERNAME=your_email@example.com
 AUTONIQ_PASSWORD=your_password
+
+# PostgreSQL Database (Railway will provide this automatically)
+DATABASE_URL=postgresql://user:password@host:5432/database
+
+# Session Secret (for production, use a strong random string)
+SESSION_SECRET=change-this-in-production
