--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.1",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
-    "playwright": "^1.58.0",
-    "puppeteer": "^24.36.1",
-    "pg": "^8.11.3",
-    "multer": "^1.4.5-lts.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "bcrypt": "^5.1.1"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "playwright": "^1.58.0",
+    "puppeteer": "^24.36.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
